<resources>
    <string name="app_name">Medico</string>

    <!-- splash text -->
    <string name="text_splash1">Medi</string>
    <string name="text_splash2">Kuy</string>
    <string name="splash_logo">Image Splash Logo</string>
    <string name="splash_desc">Your Personal Health Care</string>

    <!-- login text -->
    <string name="title_login">Welcome \nIn The App</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="text_sign_up">Don\'t Have an Account?</string>

    <!-- register text -->
    <string name="title_register">Create \nAccount</string>
    <string name="fullname">FullName</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="phone">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already Have an Account?</string>


    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Custom</item>
    </string-array>

</resources>