<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_tosca">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_40"
                android:layout_marginTop="@dimen/spacing_64"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/title_register"
                android:textColor="@color/black"
                android:textSize="@dimen/font_40"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edtFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_40"
                android:layout_marginTop="@dimen/spacing_32"
                android:layout_marginEnd="@dimen/spacing_40"
                android:background="@drawable/ic_rounded_form"
                android:hint="@string/fullname"
                android:inputType="textPersonName"
                android:paddingStart="@dimen/padding_20"
                android:paddingEnd="@dimen/padding_10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_login" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_40"
                android:layout_marginTop="@dimen/spacing_24"
                android:layout_marginEnd="@dimen/spacing_40"
                android:background="@drawable/ic_rounded_form"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/padding_20"
                android:paddingEnd="@dimen/padding_10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtFullName" />

            <EditText
                android:id="@+id/edtBirthDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_40"
                android:layout_marginTop="@dimen/spacing_24"
                android:layout_marginEnd="@dimen/spacing_40"
                android:background="@drawable/ic_rounded_form"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/date_of_birth"
                android:inputType="datetime"
                android:paddingStart="@dimen/padding_20"
                android:paddingEnd="@dimen/padding_20"
                android:drawableEnd="@drawable/ic_calendar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtEmail" />

            <EditText
                android:id="@+id/edtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_40"
                android:layout_marginTop="@dimen/spacing_24"
                android:layout_marginEnd="@dimen/spacing_40"
                android:background="@drawable/ic_rounded_form"
                android:hint="@string/phone"
                android:paddingStart="@dimen/padding_20"
                android:paddingEnd="@dimen/padding_10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtBirthDate" />

            <com.skydoves.powerspinner.PowerSpinnerView
                android:id="@+id/dropdownGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/gender"
                android:textSize="@dimen/font_18"
                android:fontFamily="@font/nunito_medium"
                android:layout_marginStart="@dimen/spacing_40"
                android:layout_marginTop="@dimen/spacing_24"
                android:layout_marginEnd="@dimen/spacing_40"
                android:paddingStart="@dimen/padding_20"
                android:paddingEnd="@dimen/padding_10"
                android:paddingTop="@dimen/padding_13"
                android:background="@drawable/ic_rounded_form"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtPhone"/>


            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_40"
                android:layout_marginTop="@dimen/spacing_24"
                android:layout_marginEnd="@dimen/spacing_40"
                android:background="@drawable/ic_rounded_form"
                android:hint="@string/password"
                android:paddingStart="@dimen/padding_20"
                android:paddingEnd="@dimen/padding_20"
                android:drawableEnd="@drawable/ic_show_password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dropdownGender" />

            <EditText
                android:id="@+id/edtConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_40"
                android:layout_marginTop="@dimen/spacing_24"
                android:layout_marginEnd="@dimen/spacing_40"
                android:drawableEnd="@drawable/ic_hide_password"
                android:background="@drawable/ic_rounded_form"
                android:hint="@string/confirm_password"
                android:paddingStart="@dimen/padding_20"
                android:paddingEnd="@dimen/padding_20"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtPassword" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_40"
                android:layout_marginTop="@dimen/spacing_24"
                android:layout_marginEnd="@dimen/spacing_40"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:background="@drawable/ic_btn_rounded"
                android:textSize="@dimen/font_18"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtConfirmPassword"/>

            <TextView
                android:id="@+id/title_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_24"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/already_have_an_account"
                android:textColor="@color/black"
                android:textSize="@dimen/font_18"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnRegister" />

            <TextView
                android:id="@+id/txtNextSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_24"
                android:layout_marginBottom="@dimen/spacing_91"
                android:fontFamily="@font/nunito_medium"
                android:text="@string/sign_in"
                android:textColor="@color/main_blue"
                android:textSize="@dimen/font_18"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_have_account"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>